# tree-sitter-migoto

./: .editorconfig  .gitignore  .tsqueryrc.json  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: publish.yml
.topiary/queries/: migoto.scm
bindings/c/: tree-sitter-migoto.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_migoto/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMigoto/: migoto.h
bindings/swift/TreeSitterMigotoTests/: TreeSitterMigotoTests.swift
bindings/zig/: root.zig  test.zig
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm
queries/helix/: highlights.scm  indents.scm
queries/neovim/: folds.scm  highlights.scm  indents.scm  locals.scm
queries/zed/: highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: commandlists.txt  constants.txt  custom_shader.txt  errors.txt  keys.txt  overrides.txt  preamble.txt  regex.txt  resource.txt  settings.txt
