[package]
name = "tree-sitter-migoto"
description = "A tree-sitter parser for the DSL of the INI files used by 3Dmigoto"
version = "0.5.6"
authors = ["LupoMikti <lykare@proton.me>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "migoto"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/lupomikti/tree-sitter-migoto"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
